[package]
name = "sql-table"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Artem Tokarev <tokarev28.art@gmail.com>"]
keywords = ["sql", "database", "proc-macro"]
categories = ["database"]
description = "Makes no-ORM querying of SQL databases less boilerplate and less hardcoded"
repository = "https://github.com/tokarevart/sql-table"
readme = "README.md"

[workspace]

[dependencies.inject]
path = "inject"

[dependencies]
paste = "1.0"
